<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="buscard">Buscar dispositivo</string>
    <string name="obtenerin">Obtener información</string>
    <string name="salir">Salir</string>
    <string name="encenderblue">Bluetooth</string>
    <string name="title_activity_dispositivos">Dispositivos</string>
    <string name="dispositivosd">Dispositivos disponibles</string>
    <string name="title_activity_mostrar_datos">MostrarDatos</string>
    <string name="diastolicat">Diastolica</string>
    <string name="sistolicat">Sistolica</string>
    <string name="aceptar">Aceptar</string>

</resources>
